rust/parser-prql/src/snapshots/parse_prql_fragments@2.prql.snap
---
source: rust/parser-prql/src/lib.rs
assertion_line: 59
expression: resource_info
input_file: fixtures/fragments/prql/2.prql
---
{
  "resource": {
    "type": "Code",
    "path": "fragments/prql/2.prql",
    "id": "",
    "kind": "SoftwareSourceCode",
    "language": "PRQL"
  },
  "relations": [
    [
      {
        "type": "Uses",
        "range": [
          3,
          2,
          3,
          9
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/prql/2.prql",
        "name": "table_a",
        "kind": "Datatable"
      }
    ],
    [
      {
        "type": "Uses",
        "range": [
          5,
          10,
          5,
          12
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/prql/2.prql",
        "name": "par1",
        "kind": ""
      }
    ],
    [
      {
        "type": "Uses",
        "range": [
          6,
          14,
          6,
          16
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/prql/2.prql",
        "name": "par2",
        "kind": ""
      }
    ]
  ],
  "compile_digest": "13857901284411604567.5660661036073598873.0.0.0",
  "tags": []
}
